Add /impr and /imprr impersonation variants
Co-authored-by: AlexGamerNice <AlexGamerNice@users.noreply.github.com>